services/openplanner/k8s/overlays/local-kind-mongodb/delete-chroma-deployment.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openplanner-chroma
