services/openplanner/k8s/overlays/local-kind-mongodb/openplanner-mongodb-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openplanner
spec:
  replicas: 2
  minReadySeconds: 10
  progressDeadlineSeconds: 600
  strategy:
    $patch: replace
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    spec:
      containers:
        - name: openplanner
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
