services/openplanner/k8s/overlays/local-kind-mongodb/host-proxx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxx-host
spec:
  ports:
    - name: http
      port: 8789
      targetPort: 8789
