services/openplanner/k8s/overlays/local-kind-mongodb/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: openplanner
    app.kubernetes.io/component: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
